// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detections workspace snapshot 1`] = `
<DocumentFragment>
  <main>
    <h2>
      Detections
    </h2>
    <div
      class="panel"
    >
      <h3>
        Detection run
      </h3>
      <p
        class="small"
      >
        Start anomaly detection for a selected detector and last one minute window.
      </p>
      <label>
        Detector
        <select
          disabled=""
        >
          <option
            value=""
          >
            No detectors available
          </option>
        </select>
      </label>
      <button
        class="primary"
        disabled=""
        style="margin-top: 12px;"
        type="button"
      >
        Run detection
      </button>
    </div>
    <section
      class="panel"
    >
      <p
        class="small"
      >
        Active detector: not selected 
      </p>
    </section>
    <section
      class="panel"
    >
      <h3>
        Detection runs
      </h3>
      <table>
        <thead>
          <tr>
            <th>
              ID
            </th>
            <th>
              Detector
            </th>
            <th>
              Status
            </th>
            <th>
              Window
            </th>
            <th>
              Threshold
            </th>
            <th>
              Features
            </th>
            <th>
              Score
            </th>
            <th>
              Anomaly
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </section>
  </main>
</DocumentFragment>
`;

exports[`detectors workspace snapshot 1`] = `
<DocumentFragment>
  <main>
    <h2>
      Detectors
    </h2>
    <form
      class="panel"
    >
      <h3>
        Create detector
      </h3>
      <div
        class="form-grid"
      >
        <label>
          Detector name
          <input
            minlength="3"
            required=""
            value="Default detector"
          />
        </label>
        <label>
          Status
          <select>
            <option
              value="draft"
            >
              Draft
            </option>
            <option
              value="active"
            >
              Active
            </option>
            <option
              value="archived"
            >
              Archived
            </option>
          </select>
        </label>
        <label>
          Description
          <input
            maxlength="180"
            required=""
            value="Detects traffic spikes in rolling windows"
          />
        </label>
        <label>
          Sensitivity (0.1 - 1.0)
          <input
            max="1"
            min="0.1"
            required=""
            step="0.05"
            type="number"
            value="0.7"
          />
        </label>
        <label>
          Window size (seconds)
          <input
            max="3600"
            min="10"
            required=""
            step="10"
            type="number"
            value="60"
          />
        </label>
        <label>
          Window step (seconds)
          <input
            max="900"
            min="5"
            required=""
            step="5"
            type="number"
            value="30"
          />
        </label>
        <label>
          Features (comma-separated)
          <input
            placeholder="bytes_per_sec, packets_per_sec, latency_ms"
            required=""
            value="bytes_per_sec, packets_per_sec"
          />
        </label>
      </div>
      <div
        style="margin-top: 12px;"
      >
        <button
          class="primary"
          type="submit"
        >
          Save detector
        </button>
      </div>
    </form>
    <section
      class="panel"
    >
      <h3>
        Configured detectors
      </h3>
      <p
        class="small"
      >
        No detectors created yet.
      </p>
      <ul />
    </section>
  </main>
</DocumentFragment>
`;

exports[`generator workspace snapshot 1`] = `
<DocumentFragment>
  <main>
    <h2>
      Traffic Generator
    </h2>
    <p
      class="small"
    >
      Run synthetic traffic generation in a dedicated workspace.
    </p>
    <section
      class="page-grid-two"
    >
      <form
        class="panel"
      >
        <h3>
          Traffic Generator
        </h3>
        <p
          class="small"
        >
          Generate synthetic traffic and send it to ingest.
        </p>
        <div
          class="form-grid"
        >
          <label>
            Profile name
            <input
              required=""
              value="demo-profile"
            />
          </label>
          <label>
            Source prefix
            <input
              required=""
              value="sim-sensor"
            />
          </label>
          <label>
            Batch size
            <input
              aria-label="Batch size"
              min="1"
              required=""
              type="number"
              value="10"
            />
          </label>
          <label>
            Interval (ms)
            <input
              aria-label="Interval"
              min="250"
              required=""
              step="250"
              type="number"
              value="1000"
            />
          </label>
          <label>
            Duration (sec)
            <input
              aria-label="Duration"
              min="1"
              required=""
              type="number"
              value="10"
            />
          </label>
          <label>
            Bytes min
            <input
              aria-label="Bytes min"
              min="1"
              required=""
              type="number"
              value="100"
            />
          </label>
          <label>
            Bytes max
            <input
              aria-label="Bytes max"
              min="1"
              required=""
              type="number"
              value="900"
            />
          </label>
        </div>
        <div
          style="margin-top: 12px;"
        >
          <button
            class="primary"
            type="submit"
          >
            Start
          </button>
        </div>
      </form>
      <section
        class="panel"
      >
        <h3>
          Generator Status
        </h3>
        <p
          class="small"
        >
          State: idle
        </p>
        <p
          class="small"
        >
          Progress: No batches sent yet
        </p>
        <p
          class="small"
        >
          Accepted points in last send: 0
        </p>
        <div
          style="display: flex; gap: 8px; margin-top: 10px;"
        >
          <button
            disabled=""
            type="button"
          >
            Stop
          </button>
          <button
            type="button"
          >
            Retry
          </button>
        </div>
      </section>
    </section>
  </main>
</DocumentFragment>
`;

exports[`monitoring workspace snapshot 1`] = `
<DocumentFragment>
  <main>
    <h2>
      Monitoring
    </h2>
    <section
      class="panel"
    >
      <h3>
        Live filter
      </h3>
      <label>
        Active detector profile id
        <input
          placeholder="optional detector id"
          value=""
        />
      </label>
      <div
        style="margin-top: 12px; display: flex; gap: 8px;"
      >
        <button
          type="button"
        >
          Refresh now
        </button>
      </div>
      <p
        class="small"
        style="margin-top: 8px;"
      >
        No recent traffic
      </p>
    </section>
    <section
      class="page-grid-two"
    >
      <section
        class="panel"
      >
        <h3>
          Latest Traffic
        </h3>
        <p
          class="small"
        >
          Points received: 0. Avg throughput (last 0): 0 bytes/sec
        </p>
        <p
          class="small"
        >
          No traffic yet.
        </p>
      </section>
      <section
        class="panel"
      >
        <h3>
          Latest Anomalies
        </h3>
        <p
          class="small"
        >
          Recent results: 0
        </p>
        <p
          class="small"
        >
          No anomaly results yet.
        </p>
      </section>
    </section>
    <section
      class="panel"
    >
      <p
        class="small"
      >
        Traffic points: 0, anomalies: 0
      </p>
    </section>
  </main>
</DocumentFragment>
`;
